# groupycat

./: CMakeLists.txt  README.md  groupycat.kdev4  main.cpp
src/: readme.txt
src/board/: AMove.cpp  AMove.hpp  Board.cpp  Board.hpp  Board_evaluate.cpp  Board_fork.cpp  Board_passedpawn.cpp  Board_pin.cpp  Board_search.cpp  Piece.cpp  Piece.hpp  Position.cpp  Position.hpp  Variante.cpp  Variante.hpp
src/common/: Common.cpp  Common.hpp
src/engine/: Engine.cpp  Engine.hpp
src/uci/: Uci.cpp  Uci.hpp  UciParser.cpp  UciParser.hpp
